# narrative-md

./: Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml
src/api/: api.py
src/api/background/: worker.py
src/api/config/: config.py
src/api/db/: postgres_engine.py  yoyo.ini
src/api/db/migrations/: 20240618_01_fQsgI-project.py  20240618_02_nOuaN-make-project-unique.py  20240618_03_Ds0QX-questions.py  20240619_01_7yfZI-segments.py  20240619_02_aWVuR-segments.py  20240619_03_R5CBQ-answers-to-questions.py
src/api/db/scripts/: migrate.py
src/api/endpoints/: models.py  questionnaire.py
src/api/llm/: models.py  openai.py  prompts.py
src/frontend/: app.py  requirements.txt
src/frontend/config/: config.py
src/frontend/utils/: calls.py  models.py
